# wavepid-omsim-simulation

./: CMakeLists.txt  README.md  waveform_generator.py
common/data/vis/: vis.mac
common/framework/include/: OMSimActionInitialization.hh  OMSimHitManager.hh  OMSimSensitiveDetector.hh  OMSimTrackingAction.hh  ROOTHitManager.hh
common/framework/src/: OMSim.cc  OMSimHitManager.cc  OMSimSensitiveDetector.cc  OMSimTrackingAction.cc  ROOTHitManager.cc
common/geometry_construction/include/: OMSimDetectorConstruction.hh
common/geometry_construction/src/: OMSimPDOM.cc
simulations/: CMakeLists.txt
simulations/effective_area/: CMakeLists.txt  OMSim_effective_area.cc
simulations/effective_area/include/: OMSimEffectiveAreaAnalyisis.hh  OMSimEffectiveAreaDetector.hh  OMSimEventAction.hh  OMSimPrimaryGeneratorAction.hh
simulations/effective_area/src/: OMSimEffectiveAreaAnalyisis.cc  OMSimEffectiveAreaDetector.cc  OMSimEventAction.cc  OMSimPhysicsList.cc  OMSimPrimaryGeneratorAction.cc
simulations/efficiency_calibration/src/: OMSimEffiCaliAnalyisis.cc
simulations/wavepid/: CMakeLists.txt  OMSim_wavePID.cc
simulations/wavepid/include/: OMSimEventAction.hh  OMSimPhysicsList.hh  OMSimwavePIDDetector.hh
simulations/wavepid/src/: OMSimEventAction.cc  OMSimPrimaryGeneratorAction.cc  OMSimwavePIDDetector.cc
